--- a/.github/workflows/sync2gitee.list.yml
+++ b/.github/workflows/sync2gitee.list.yml
@@ -6,6 +6,7 @@ name: sync2gitee(list)
 # lastmod: 2021-02-02 10:23:02
 
 on:
+  workflow_dispatch:
   schedule:
     # UTC 17:30 -> CST (China) 1:30 see https://datetime360.com/cn/utc-cst-china-time/
     - cron: '0 10 * * *'
