--- a/.github/workflows/sync2gitee.list.yml
+++ b/.github/workflows/sync2gitee.list.yml
@@ -25,13 +25,13 @@ jobs:
           script: |
             core.setOutput('time', new Date(Date.now()).toISOString().replace(/[^0-9]/g, ""));
             core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
-      - name: Cache src repos
-        uses: actions/cache@v2.1.3
-        id: cache
-        with:
-          path: ${{ github.workspace }}/hub-mirror-cache
-          key: ${{ runner.os }}-${{ steps.info.outputs.key }}-list-cache-${{ steps.info.outputs.time }}
-          restore-keys: ${{ runner.os }}-${{ steps.info.outputs.key }}-list-
+      # - name: Cache src repos
+      #   uses: actions/cache@v2.1.3
+      #   id: cache
+      #   with:
+      #     path: ${{ github.workspace }}/hub-mirror-cache
+      #     key: ${{ runner.os }}-${{ steps.info.outputs.key }}-list-cache-${{ steps.info.outputs.time }}
+      #     restore-keys: ${{ runner.os }}-${{ steps.info.outputs.key }}-list-
 
       - name: Generate repo list
         id: repo
