--- a/.github/workflows/sync2gitee.list.yml
+++ b/.github/workflows/sync2gitee.list.yml
@@ -39,9 +39,9 @@ jobs:
       #   with:
       #     user: 'Tree-Roots'
 
-      - name: Mark github workspace as safe
-        run: |
-          git config --global --add safe.directory ${{ github.workspace }}
+      # - name: Mark github workspace as safe
+      #   run: |
+      #     git config --global --add safe.directory ${{ github.workspace }}
 
 
       - name: Mirror hub with cache and list
